Fix: support multiple CORS origins and resolve SockJS HTTPS security issue